--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,3 +10,13 @@
 .btn-leave{
   background: #d54b57;
 }
+
+.c-red{
+  color:#f00;
+}
+.f-14{
+  font-size: 1.4rem;
+}
+.f-weight{
+  font-weight: bold;
+}
